<resources>
    <string name="app_ver" translatable="false">v 1.1</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="splash_fragment_title" translatable="false"></string>
    <string name="converter_fragment_title" translatable="false"></string>
    <string name="main_fragment_title">Units Converter</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="favorites_fragment_title">Favorires</string>
    <string name="default_number_decimals">4</string>
    <string name="default_group_separator">None</string>
    <string name="default_decimal_separator">.</string>
    <string name="ok_dialog_text">OK</string>
    <string name="cancel_dialog_text">Cancel</string>
    <string name="yes_dialog_text">Yes</string>
    <string name="create_dialog_text">Create</string>
    <string name="quit_text">Are you sure you want to quit?</string>
    <string name="prefs_title_formatting">Formatting</string>
    <string name="prefs_summary_number_decimals">Set the number of decimal places to be shown in converted value</string>
    <string name="prefs_title_number_decimals">Number of Decimals</string>
    <string name="prefs_summary_group_separator">Set the group separator to be shown in converted value</string>
    <string name="prefs_title_group_separator">Group Separator</string>
    <string name="prefs_summary_decimal_separator">Set the decimal separator to be shown in converted value</string>
    <string name="prefs_title_decimal_separator">Decimal Separator</string>
    <string name="group_separator_none">None</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_favorite">Favorites</string>
    <string name="toast_add_to_favorites">Added to favorites</string>
    <string name="toast_delete_from_favorites">Removed from favorited</string>
    <string name="megawatt">Megawatt</string>
    <string name="kilowatt">Kilowatt</string>
    <string name="watt">Watt</string>
    <string name="megacalorie_s">Megacalorie per second</string>
    <string name="kilocalorie_s">Kilocalorie per second</string>
    <string name="calorie_s">Calorie per second</string>
    <string name="megacalorie_h">Megacalorie per hour</string>
    <string name="kilocalorie_h">Kilocalorie per hour</string>
    <string name="calorie_h">Calorie per hour</string>
    <string name="bhp">Horsepower (boiler)</string>
    <string name="ehp">Horsepower (electrical)</string>
    <string name="hp">Horsepower (metric)</string>
    <string name="hp_uk">Horsepower (mechanical)</string>
    <string name="joule_s">Joule per second</string>
    <string name="erg_s">Erg per second</string>
    <string name="btu_s">British Thermal Unit per second</string>
    <string name="btu_m">British Thermal Unit per minute</string>
    <string name="btu_h">British Thermal Unit per hour</string>
    <string name="kilometre">Kilometre</string>
    <string name="hectometre">Hectometre</string>
    <string name="decametre">Decametre</string>
    <string name="metre">Metre</string>
    <string name="decimetre">Decimetre</string>
    <string name="centimetre">Centimetre</string>
    <string name="millimetre">Millimetre</string>
    <string name="micrometre">Micrometre</string>
    <string name="nanometre">Nanometre</string>
    <string name="angstrom">Angstrom</string>
    <string name="picometre">Picometre</string>
    <string name="mile">Mile</string>
    <string name="furlong">Furlong</string>
    <string name="chain">Chain</string>
    <string name="rod">Rod</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="link">Link</string>
    <string name="hand">Hand</string>
    <string name="inch">Inch</string>
    <string name="thou">Thou</string>
    <string name="nautical_mile">Nautical mile</string>
    <string name="cable">Cable</string>
    <string name="fathom">Fathom</string>
    <string name="land_league">Land league</string>
    <string name="nautical_league">Nautical league</string>
    <string name="verst">Verst</string>
    <string name="mezhevaya_verst">Mezhevaya verst</string>
    <string name="kosaya_sazhen">Kosaya sazhen</string>
    <string name="makhovaya_sazhen">Makhovaya sazhen</string>
    <string name="sazhen">Sazhen</string>
    <string name="arshin">Arshin</string>
    <string name="span">Span</string>
    <string name="vershok">Vershok</string>
    <string name="line_len">Line</string>
    <string name="dot">Dot</string>
    <string name="tonne">Tonne</string>
    <string name="centner">Centner</string>
    <string name="kilogram">Kilogram</string>
    <string name="gram">Gram</string>
    <string name="milligram">Milligram</string>
    <string name="microgram">Microgram</string>
    <string name="nanogram">Nanogram</string>
    <string name="long_ton">Ton (long)</string>
    <string name="short_ton">Ton (short)</string>
    <string name="hundredweigth">Hundredweigth (imperial)</string>
    <string name="cental">Cental</string>
    <string name="quarter">Quarter</string>
    <string name="stone">Stone</string>
    <string name="pound">Pound</string>
    <string name="pound_troy">Pound (troy)</string>
    <string name="ounce">Ounce</string>
    <string name="ounce_troy">Ounce (troy)</string>
    <string name="dram">Dram</string>
    <string name="dram_troy">Dram (troy)</string>
    <string name="pennyweight">Pennyweight</string>
    <string name="carat">Carat</string>
    <string name="carat_metric">Carat (metric)</string>
    <string name="grain">Grain</string>
    <string name="pood">Pood</string>
    <string name="sq_kilometre">Square kilometre</string>
    <string name="sq_metre">Square metre</string>
    <string name="sq_decimetre">Square decimetre</string>
    <string name="sq_centimetre">Square centimetre</string>
    <string name="sq_millimetre">Square millimetre</string>
    <string name="are">Are</string>
    <string name="hectare">Hectare</string>
    <string name="decare">Decare</string>
    <string name="sq_mile">Square mile</string>
    <string name="sq_yard">Square yard</string>
    <string name="sq_foot">Square foot</string>
    <string name="sq_inch">Square inch</string>
    <string name="rood">Rood</string>
    <string name="acre">Acre</string>
    <string name="sq_chain">Square chain</string>
    <string name="sq_rod">Square rod</string>
    <string name="sq_mil">Square mil</string>
    <string name="hectolitre">Hectolitre</string>
    <string name="decalitre">Decalitre</string>
    <string name="litre">Litre</string>
    <string name="millilitre">Millilitre</string>
    <string name="barrel">Barrel (US)</string>
    <string name="barrel_uk">Barrel (UK)</string>
    <string name="oil_barrel">Petroleum barrel</string>
    <string name="bushel">Bushel</string>
    <string name="gallon">Liquid gallon (US)</string>
    <string name="gallon_dry">Dry Gallon (US)</string>
    <string name="gallon_uk">Gallon (UK)</string>
    <string name="quart">Liquid Quart (US)</string>
    <string name="quart_dry">Dry Quart (US)</string>
    <string name="quart_uk">Quart (UK)</string>
    <string name="pint">Pint (US)</string>
    <string name="pint_uk">Pint (UK)</string>
    <string name="cup">Cup</string>
    <string name="gill">Gill</string>
    <string name="fluid_ounce">Fluid ounce (US)</string>
    <string name="fluid_ounce_uk">Fluid ounce (UK)</string>
    <string name="teaspoon">Teaspoon (Imperial)</string>
    <string name="teaspoon_us">Teaspoon (US)</string>
    <string name="teaspoon_uk">Teaspoon (UK)</string>
    <string name="tablespoon">Tablespoon (Imperial)</string>
    <string name="tablespoon_uk">Tablespoon (US)</string>
    <string name="tablespoon_us">Tablespoon (UK)</string>
    <string name="dessertspoon_us">Dessert spoon (US)</string>
    <string name="dessertspoon_uk">Dessert spoon (UK)</string>
    <string name="fluid_dram">Fluid dram</string>
    <string name="fluid_scruple">Fluid scruple</string>
    <string name="min">Min</string>
    <string name="drop">Drop</string>
    <string name="drop_imperial">Drop (Imperial)</string>
    <string name="cubic_km">Cubic kilometre</string>
    <string name="cubic_m">Cubic metre</string>
    <string name="cubic_dm">Cubic decimetre</string>
    <string name="cubic_cm">Cubic centimetre</string>
    <string name="cubic_mm">Cubic millimetre</string>
    <string name="cubic_mile">Cubic mile</string>
    <string name="cubic_yard">Cubic yard</string>
    <string name="cubic_foot">Cubic foot</string>
    <string name="cubic_inch">Cubic inch</string>
    <string name="km_h">Kilometre per hour</string>
    <string name="km_m">Kilometre per minute</string>
    <string name="km_s">Kilometre per second</string>
    <string name="m_h">Metre per hour</string>
    <string name="m_m">Metre per minute</string>
    <string name="m_s">Metre per second</string>
    <string name="cm_h">Centimetre per hour</string>
    <string name="cm_m">Centimetre per minute</string>
    <string name="cm_s">Centimetre per second</string>
    <string name="mm_h">Millimetre per hour</string>
    <string name="mm_m">Millimetre per minute</string>
    <string name="mm_s">Millimetre per second</string>
    <string name="mph">Mile per hour</string>
    <string name="mpm">Mile per minute</string>
    <string name="mps">Mile per second</string>
    <string name="fph">Foot per hour</string>
    <string name="fpm">Foot per minute</string>
    <string name="fps">Foot per second</string>
    <string name="iph">Inch per hour</string>
    <string name="ipm">Inch per minute</string>
    <string name="ips">Inch per second</string>
    <string name="knot">Knot</string>
    <string name="hectopascal">Hectopascal</string>
    <string name="megapascal">Megapascal</string>
    <string name="kilopascal">Kilopascal</string>
    <string name="pascal">Pascal</string>
    <string name="bar">Bar</string>
    <string name="mmbar">Millibar</string>
    <string name="mcbar">Barye</string>
    <string name="psi">PSI</string>
    <string name="psf">PSF</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="technical_atmosphere">Technical Atmosphere</string>
    <string name="cmhg">Centimetre of Mercury</string>
    <string name="mmhg">Millimetre of Mercury</string>
    <string name="mchg">Micrometre of Mercury</string>
    <string name="fhg">Foot of Mercury</string>
    <string name="ihg">Inch of Mercury</string>
    <string name="cmwc">Centimetre of Water</string>
    <string name="mmwc">Millimetre of Water</string>
    <string name="mwc">Metre of Water</string>
    <string name="fwc">Foot of Water</string>
    <string name="iwc">Inch of Water</string>
    <string name="torr">Torr</string>
    <string name="meganewton">Meganewton</string>
    <string name="kilonewton">Kilonewton</string>
    <string name="newton_force">Newton</string>
    <string name="millinewton">Millinewton</string>
    <string name="micronewton">Micronewton</string>
    <string name="ton_force">Ton-force</string>
    <string name="kip_force">Kip-force</string>
    <string name="pound_force">Pound-force</string>
    <string name="ounce_force">Ounce-force</string>
    <string name="tonne_force">Tonne-force</string>
    <string name="kilopond">Kilopond</string>
    <string name="kilogram_force">Kilogram-force</string>
    <string name="grave_force">Grave-force</string>
    <string name="gram_force">Gram-force</string>
    <string name="milligrave_force">Milligrave-force</string>
    <string name="gravet_force">Gravet-force</string>
    <string name="milligram_force">Milligram-force</string>
    <string name="sthene">Sthene</string>
    <string name="poundal">Poundal</string>
    <string name="dyne">Dyne</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
</resources>