<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subcategory_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/prefs_title_formatting"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/whiteColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_title_number_decimals"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/prefs_summary_number_decimals"
                    android:textColor="@color/settings_subtext" />

                <Spinner
                    android:id="@+id/number_decimals_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />
            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/separator_line_layout"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/whiteColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_title_group_separator"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/prefs_summary_group_separator"
                    android:textColor="@color/settings_subtext" />

                <Spinner
                    android:id="@+id/group_separator_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/separator_line_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/whiteColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_title_decimal_separator"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textColor="@color/settings_subtext"
                    android:text="@string/prefs_summary_decimal_separator" />

                <Spinner
                    android:id="@+id/decimal_separator_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/separator_line_layout" />


    </LinearLayout>


</LinearLayout>